# inngest-cleanup

./: .gitignore  Dockerfile  PGPart.Dockerfile  README.md  cleanup_events.py  cleanup_events_v1.py  cleanupv2-sqlite.py  cleanupv2.py  entrypoint.sh  pyproject.toml  run.sh  setup_cleanup.sh
.github/workflows/: build-pgpart.yml  build-push.yml
v1/: entrypoint.sh  healthcheck.py  healthcheck.sh  pyproject.toml
v2/: Dockerfile  cleanup_cron.sh  cleanup_inngest_env.py  docker-entrypoint.sh  pyproject.toml
v3/: CHANGES_FROM_V2.md  Dockerfile  Dockerfile.old  README.md  check_specific_run.py  cleanup_cron.old.sh  cleanup_cron.sh  cleanup_inngest_env_with_redis.py  debug_redis_pg_match.py  diagnostic_check.py  docker-compose.example.yml  docker-entrypoint.old.sh  docker-entrypoint.sh  pyproject.toml  scan_redis_keys.py  test_redis_connection.py  ulid_converter.py  verify_cleanup.py
